# ZxLite

./: .gitignore  CMakeLists.txt  CMakeMycfg.cmake  CMakeMypkg.cmake  CMakePresets.json  vcpkg.json  xmake.lua
.github/workflows/: ci.yml
lib/: CMakeLists.txt
lib/detours/: CMakeLists.txt  Mock.cpp  Mock.h
lib/intrinsic/: CMakeLists.txt  intrinsic.cpp
src/: CMakeLists.txt
src/RxLite/: RxLite.cpp  RxLite.h
src/src/Zut/ZxLite/: Console.cpp  Console.h  Hasher.cpp  Hasher.h  Injector.cpp  Injector.h  Module.cpp  Module.h  MsgBox.cpp  MsgBox.h  StrView.cpp  StrView.h  String.cpp  String.h  ZIntrinsic.cpp  ZIntrinsic.h
test/: CMakeLists.txt  main.cpp
test/SampleDll/: CMakeLists.txt  dllmain.cpp
test/SampleExe/: CMakeLists.txt  main.cpp
tryout/: CMakeLists.txt
tryout/SampleDetoursDll/: CMakeLists.txt  dllmain.cpp
tryout/SampleDll/: CMakeLists.txt  dllmain.cpp
tryout/SampleExe/: CMakeLists.txt  main.cpp
